@@ -1,0 +1,13 @@
+//---------------------------------------------------------------------------------------
+//  $Id: OCMockObjectTests.h 21 2008-01-24 18:59:39Z erik $
+//  Copyright (c) 2004-2008 by Mulle Kybernetik. See License file for details.
+//---------------------------------------------------------------------------------------
+
+#import <SenTestingKit/SenTestingKit.h>
+
+
+@interface OCMockObjectHamcrestTests : SenTestCase 
+{
+}
+
+@end
